--- a/style.css
+++ b/style.css
@@ -54,9 +54,17 @@ footer {
     border-radius: 12px;
 }
 
+.hasread::before {
+    content: "Have Read";
+}
+
 .notread {
     background-color: rgb(255, 217, 0);
     border-radius: 12px;
+}
+
+.notread::before {
+    content: "Have Not Read";
 }
 
 .delbtn {
