--- a/style.css
+++ b/style.css
@@ -86,6 +86,22 @@ footer {
 .container {
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#formv {
+    margin-top: 38px;
+    color: red;
+    font-style: italic;
+    font-size: large;
+    height: 20%;
+    background-color: yellow;
+    border-radius: 15px;
+    display: none;
+    justify-content: center;
+    align-items: center;
 }
 
 form {
@@ -94,4 +110,5 @@ form {
     justify-content: flex-start;
     align-items: center;
     gap: 15px;
+    flex-grow: 1;
 }
