--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ footer {
 
 .delbtn {
     border-radius: 12px;
-    background-color: red;
+    background-color: rgb(233, 16, 16);
 }
 
 .popup {
